dibs/tests/snapshots/postgres_integration__boolean_vs_integer.snap
---
source: crates/dibs/tests/postgres_integration.rs
expression: error.to_string()
---
type mismatch reading error_test_5.is_active: database column is 'bool', but dibs schema expects 'integer'
hint: you may need to run migrations to update the database schema
