dibs/tests/snapshots/postgres_integration__jsonb_vs_text.snap
---
source: crates/dibs/tests/postgres_integration.rs
expression: error.to_string()
---
type mismatch reading error_test_3.data: database column is 'jsonb', but dibs schema expects 'text'
hint: you may need to run migrations to update the database schema
