dibs/tests/snapshots/postgres_integration__text_vs_jsonb.snap
---
source: crates/dibs/tests/postgres_integration.rs
expression: error.to_string()
---
type mismatch reading error_test_4.attributes: database column is 'text', but dibs schema expects 'jsonb'
hint: you may need to run migrations to update the database schema
